--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,8 @@
 .ReactCollapse--collapse {
     transition: height 500ms;
 }
+
+input:checked~.dot {
+    transform: translateX(100%);
+    background-color: #48bb78;
+}
