--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -112,6 +112,10 @@ p.hint.error:before {
     animation: rotation 1s linear infinite;
 }
 
+.animate-scroll {
+    animation: scroll 100s linear infinite;
+}
+
 @keyframes rotation {
     0% {
         transform: rotate(0deg);
@@ -119,5 +123,16 @@ p.hint.error:before {
 
     100% {
         transform: rotate(360deg);
+    }
+}
+
+
+@keyframes scroll {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(calc(-100%));
     }
 }
