Replaced Javascript Scroll with Native CSS Scroll

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,6 +18,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scroll-behavior: smooth;
+}
 
 .ReactCollapse--collapse {
     transition: height 500ms;
